--- a/src/theme.scss
+++ b/src/theme.scss
@@ -2,7 +2,8 @@
 @use '@angular/material' as mat;
 @use '@material/textfield';
 
-@include mat.core();
+@include mat.elevation-classes();
+@include mat.app-background();
 
 $primary-palette: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
 $accent-palette: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
