--- a/projects/editor/src/lib/field-drag-drop/field-drop-overlay/field-drop-overlay.component.scss
+++ b/projects/editor/src/lib/field-drag-drop/field-drop-overlay/field-drop-overlay.component.scss
@@ -4,7 +4,7 @@
     display: flex;
     pointer-events: none;
     touch-action: none;
-    background-color: rgba(0, 0, 0, 0.05);
+    background-color: rgb(0, 0, 0, 0.05);
     border-radius: 4px;
     opacity: 0;
     transition: opacity 0.15s ease-out;
