--- a/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
+++ b/projects/editor/src/lib/custom-formly/formly-field/formly-field.component.scss
@@ -8,7 +8,7 @@
 }
 
 .editor-field-container.edit-mode {
-    background-color: white;
+    background-color: var(--mat-sys-surface-container-lowest);
     border: 2px solid;
     border-color: transparent;
     border-radius: 4px;
@@ -16,12 +16,12 @@
 
 .editor-field-container.edit-mode:hover {
     border: 2px solid;
-    border-color: rgba(0, 0, 0, 0.12);
+    border-color: var(--mat-sys-outline-variant);
 }
 
 .editor-field-container.edit-mode.active {
     border: 2px solid;
-    border-color: rgba(0, 0, 0, 0.4);
+    border-color: var(--mat-sys-outline);
 }
 
 .editor-field-content.edit-mode {
@@ -34,10 +34,12 @@ header {
     border-radius: 2px 2px 0 0;
     padding: 1px 2px;
     box-sizing: border-box;
-    background-color: rgba(0, 0, 0, 0.12);
+    background-color: var(--mat-sys-surface-container-low);
 }
 
 .header-title {
+    font-size: var(--mat-sys-title-small-size);
+    font-weight: var(--mat-sys-title-small-weight);
     flex-grow: 1;
     position: relative;
     display: flex;
