--- a/projects/editor/src/lib/edit-field/edit-field.component.scss
+++ b/projects/editor/src/lib/edit-field/edit-field.component.scss
@@ -1,14 +1,10 @@
 :host ::ng-deep {
-    .mat-mdc-tab-header {
-        border-bottom: 1px solid rgba(0, 0, 0, 0.12);
-    }
-
     .mat-mdc-tab-body-wrapper {
         height: 100%;
     }
 
     .mat-expansion-panel {
-        border: 1px solid rgba(0, 0, 0, 0.12);
+        border: 1px solid var(--mat-sys-outline-variant);
         box-shadow: none !important;
     }
 }
