--- a/projects/editor/src/lib/property/array-property/array-property.component.scss
+++ b/projects/editor/src/lib/property/array-property/array-property.component.scss
@@ -24,7 +24,7 @@
 
 .line {
     width: 1px;
-    background-color: rgba(0, 0, 0, 0.12);
+    background-color: var(--mat-sys-outline-variant);
     margin: 0 14px;
 }
 
