--- a/projects/editor/src/lib/property/expression-properties-property/expression-properties-property.component.scss
+++ b/projects/editor/src/lib/property/expression-properties-property/expression-properties-property.component.scss
@@ -26,7 +26,7 @@
 
 .line {
     width: 1px;
-    background-color: rgba(0, 0, 0, 0.12);
+    background-color: var(--mat-sys-outline-variant);
     margin: 0 14px;
 }
 
