--- a/projects/editor/src/lib/property/property-key/property-key.component.scss
+++ b/projects/editor/src/lib/property/property-key/property-key.component.scss
@@ -15,13 +15,13 @@
     padding: 0.225em;
     border-radius: 4px;
     cursor: text;
-    outline: 1px solid rgba(0, 0, 0, 0.15);
+    outline: 1px solid var(--mat-sys-outline-variant);
 }
 
 .key-field.editable:hover {
-    outline: 2px solid rgba(0, 0, 0, 1);
+    outline: 2px solid var(--mat-sys-outline);
 }
 
 .key-field.editable:focus {
-    outline: 2px solid #3f51b5;
+    outline: 2px solid var(--mat-sys-primary);
 }
