--- a/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
+++ b/projects/editor/src/lib/sidebar/sidebar-section/sidebar-section.component.scss
@@ -7,7 +7,7 @@
     position: relative;
     height: 100%;
     height: 4px;
-    background-color: rgba(0, 0, 0, 0.12);
+    background-color: var(--mat-sys-outline-variant);
     cursor: ns-resize;
     z-index: 1;
 }
@@ -25,7 +25,7 @@
 .sidebar-divider:hover::after {
     height: 16px;
     top: -6px;
-    background-color: rgba(0, 0, 0, 0.2);
+    background-color: color-mix(in srgb, var(--mat-sys-outline-variant), rgb(0, 0, 0, 0.2));
 }
 
 .sidebar-section-wrapper {
@@ -38,12 +38,14 @@
 }
 
 .sidebar-header {
+    font-size: var(--mat-sys-title-small-size);
+    font-weight: var(--mat-sys-title-small-weight);
     height: calc(var(--editor-header-height) + 1px);
     display: flex;
     align-items: center;
     column-gap: 8px;
     padding: 0 12px;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.12);
+    border-bottom: 1px solid var(--mat-sys-outline-variant);
     box-sizing: border-box;
     user-select: none;
     cursor: pointer;
