--- a/src/theme.scss
+++ b/src/theme.scss
@@ -1,25 +1,39 @@
-@use 'sass:map';
 @use '@angular/material' as mat;
 
-@include mat.elevation-classes();
-@include mat.app-background();
-
-$primary-palette: mat.m2-define-palette(mat.$m2-indigo-palette, 500);
-$accent-palette: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
-
-$typography: mat.m2-define-typography-config();
-$typography: map.set($typography, body-1, font-size, 14px);
-
-$theme: mat.m2-define-light-theme(
+html {
+    color-scheme: light;
+    @include mat.theme(
+        (
+            color: mat.$cyan-palette,
+            typography: Roboto,
+            density: -1,
+        )
+    );
+}
+@include mat.form-field-density(-1);
+@include mat.form-field-overrides(
     (
-        color: (
-            primary: $primary-palette,
-            accent: $accent-palette,
-        ),
-        typography: $typography,
+        filled-label-text-size: var(--mat-sys-body-medium-size),
+        container-text-size: var(--mat-sys-body-medium-size),
     )
 );
-
-@include mat.all-component-themes($theme);
-@include mat.typography-hierarchy($theme);
-@include mat.form-field-density(-1);
+@include mat.select-overrides(
+    (
+        trigger-text-size: var(--mat-sys-body-medium-size),
+    )
+);
+@include mat.option-overrides(
+    (
+        label-text-size: var(--mat-sys-body-medium-size),
+    )
+);
+@include mat.expansion-overrides(
+    (
+        header-text-size: var(--mat-sys-body-medium-size),
+    )
+);
+@include mat.tabs-overrides(
+    (
+        divider-color: var(--mat-sys-outline-variant),
+    )
+);
